[package]
name = "UnitConverter"
version = "0.1.0"
edition = "2024"
description = "A library created to do unit conversions. After converting to wasm, this will later be built into an API."

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
serde_json = "1.0.140"
