[package]
name = "UnitConverter"
version = "0.1.0"
edition = "2024"
description = "A library created to do unit conversions. After converting to wasm, this will later be built into an API."

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[dependencies]
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
serde_json = "1.0.140"
image = "0.24.0"
base64 = "0.21.0"
wee_alloc = "0.4.5"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.0"

[profile.release]
opt-level = "z"
